<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/iconLogin"
            android:layout_width="148dp"
            android:layout_height="152dp"
            android:layout_marginTop="84dp"
            android:src="@drawable/loginlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoginDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            android:text="@string/loginweclome"
            android:textColor="@color/background_splash"
            android:textStyle="bold"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:alpha="1" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/logintext"
            android:textAlignment="viewStart"
            android:textColor="@color/background_splash"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription" />

        <com.example.biteshub.customview.CVEmail
            android:id="@+id/CVEmail"
            android:layout_width="347dp"
            android:layout_height="58dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:textColorHint="@color/background_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

        <com.example.biteshub.customview.CVPassword
            android:id="@+id/PasswordLogin"
            android:textColorHint="@color/background_splash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/CVEmail"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/CVEmail"
            app:layout_constraintTop_toBottomOf="@+id/CVEmail"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:backgroundTint="@color/background_splash"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/PasswordLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
            app:layout_constraintTop_toBottomOf="@+id/seePassword" />

        <TextView
            android:id="@+id/tvRegistDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="668dp"
            android:text="@string/haveanaccount"
            android:textAlignment="center"
            android:textColor="@color/background_splash"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintHorizontal_bias="0.349"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/seePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/background_splash"
            android:text="@string/passwordVisible"
            app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
            app:layout_constraintTop_toBottomOf="@+id/PasswordLogin" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/signup"
            android:textColor="@color/background_splash"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvRegistDescription"
            app:layout_constraintTop_toTopOf="@+id/tvRegistDescription" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressBarStyle"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CVEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>