<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

    <ImageView
        android:id="@+id/iconRegist"
        android:layout_width="140dp"
        android:layout_height="127dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginlogo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textregister"
            android:textColor="@color/background_splash"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/iconRegist"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/iconRegist"
            app:layout_constraintTop_toBottomOf="@+id/iconRegist" />

        <com.example.biteshub.customview.CVName
            android:id="@+id/RegistName"
            android:layout_width="343dp"
            android:layout_height="51dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/border"
            android:hint="@string/username"
            android:textColorHint="@color/background_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.example.biteshub.customview.CVEmail
        android:textColorHint="@color/background_splash"
        android:background="@drawable/border"
        android:id="@+id/RegistEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/RegistName"
        app:layout_constraintStart_toStartOf="@+id/RegistName"
        app:layout_constraintTop_toBottomOf="@+id/RegistName" />

    <com.example.biteshub.customview.CVPassword
        android:textColorHint="@color/background_splash"
        android:background="@drawable/border"
        android:id="@+id/RegistPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/RegistEmail"
        app:layout_constraintStart_toStartOf="@+id/RegistEmail"
        app:layout_constraintTop_toBottomOf="@+id/RegistEmail" />

    <com.example.biteshub.customview.CVIsPasswordSame
        android:textColorHint="@color/background_splash"
        android:background="@drawable/border"
        android:id="@+id/RetypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirmpassword"
        app:layout_constraintEnd_toEndOf="@+id/RegistPassword"
        app:layout_constraintStart_toStartOf="@+id/RegistPassword"
        app:layout_constraintTop_toBottomOf="@+id/RegistPassword" />

    <CheckBox
        android:id="@+id/seeRegistPassword"
        android:layout_width="166dp"
        android:layout_height="49dp"
        android:textColor="@color/background_splash"
        android:text="@string/passwordVisible"
        app:layout_constraintStart_toStartOf="@+id/RetypePassword"
        app:layout_constraintTop_toBottomOf="@+id/RetypePassword" />

        <Button
            android:id="@+id/btnRegistAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/background_splash"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/RetypePassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/RetypePassword"
            app:layout_constraintTop_toBottomOf="@+id/seeRegistPassword" />

        <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>